--- a/index.html
+++ b/index.html
@@ -129,13 +129,21 @@
     <section id="section-speakers"  style="background:#FFFFFF">
         <div class="container">
             <div class="row">
-		<div>
-                <img src="images/team/Настя.png" style="float:left" width="80%">
-		<div>
-		<img src="images/team/Настя.png" width="40%">
-		<img src="images/team/Настя.png" width="40%">
+
+		<div class="carousel">
+		  <div class="carousel-inner">
+		    <div class="carousel-item">
+		      <img src="images/team/Юля.png" alt="Image 1">
+		    </div>
+		    <div class="carousel-item">
+		      <img src="images/team/Юля.png" alt="Image 2">
+		    </div>
+		    <div class="carousel-item">
+		      <img src="images/team/Юля.png" alt="Image 3">
+		    </div>
+		  </div>
 		</div>
-		</div>
+		    
             </div>
         </div>
     </section>
