--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
     <script src="js/jquery.countdown.js"></script>
     <script src="js/countdown-custom.js"></script>
     <script src="js/designesia.js"></script>
+    <script src="js/cont.js"></script>	
 
 </body>
 
