--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
 		    </div>
 		  </div>
 		</div>
-		    
+		<a class="prev" onclick="goToPrevSlide()">&#10094;</a>
+       		<a class="next" onclick="goToNextSlide()">&#10095;</a>    
             </div>
         </div>
     </section>
