--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
     <section id="section-speakers"  style="background:#FFFFFF">
         <div class="container">
             <div class="row">
-
+	<figure>
+		<img src = "images/team/Ренатра.png" width="400">
+		<h3>Рената Адамова</h3>
+		<h4>Студентка 3 курса<br>
+		Ижевской государственной медицинской академии</h4>
+	</figure>
 		<div class="carousel">
 		  <div class="carousel-inner">
 		    <div class="carousel-item">
