--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="container">
             <div class="row">
 	<figure>
-		<img src = "images/team/Рената.png" width="600">
+		<img src = "images/team/Рената.png" width="50%">
 		<h3>Рената Адамова</h3>
 		<h6>Студентка 3 курса<br>
 		Ижевской государственной медицинской академии</h6>
