--- a/index.html
+++ b/index.html
@@ -124,12 +124,15 @@
     <section id="section-speakers"  style="background:#FFFFFF">
         <div class="container">
             <div class="row">
-	<figure>
+		    <div>
+	<figure alight="left">
 		<img src = "images/team/Рената.png" class="responsive">
-		<h3>Рената Адамова</h3>
-		<h6>Студентка 3 курса<br>
-		Ижевской государственной медицинской академии</h6>
+		<p><a stule="font-size:40px">Рената Адамова</a><br>
+		<a stule="font-size:20px">Студентка 3 курса<br>
+		Ижевской государственной медицинской академии</a></p>
 	</figure>
+			    ТекстТекст
+			    </div>
 		<div class="carousel">
 		  <div class="carousel-inner">
 		    <div class="carousel-item">
