--- a/index.html
+++ b/index.html
@@ -125,14 +125,16 @@
         <div class="container">
             <div class="row">
 		    <div>
-	<figure alight="left">
+	<figure style="float:left">
 		<img src = "images/team/Рената.png" class="responsive">
-		<p><a stule="font-size:40px">Рената Адамова</a><br>
-		<a stule="font-size:20px">Студентка 3 курса<br>
+		<p><a stule="font-size:200px">Рената Адамова</a><br>
+		<a stule="font-size:150px">Студентка 3 курса<br>
 		Ижевской государственной медицинской академии</a></p>
 	</figure>
+			    <p style="float:right">
 			    ТекстТекст
-			    </div>
+			    </p>	    
+		    </div>
 		<div class="carousel">
 		  <div class="carousel-inner">
 		    <div class="carousel-item">
