--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 		<a stule="font-size:150px">Студентка 3 курса<br>
 		Ижевской государственной медицинской академии</a></p>
 	</figure>
-			    <p style="float:right">
-			    ТекстТекст
+			    <p>
+			    ТекстТекстТекст
 			    </p>	    
 		    </div>
 		<div class="carousel">
