--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
             <div class="row">
 		    <div>
 	<figure style="float:left">
-		<img src = "images/team/Рената.png" class="responsive">
-		<p><a stule="font-size:200px">Рената Адамова</a><br>
-		<a stule="font-size:150px">Студентка 3 курса<br>
-		Ижевской государственной медицинской академии</a></p>
+		<img src = "images/team/Рената.png" class="responsive" hspace=50px">
+		<p><a stule="font-size:700px"><b>Рената Адамова</b>b></a><br>
+		<a stule="font-size:150px"><i>Студентка 3 курса<br>
+		Ижевской государственной медицинской академии</i>i></a></p>
 	</figure>
 			    <p>
 			    ТекстТекстТекст
