--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 		    <div>
 	<figure style="float:left">
 		<img src = "images/team/Рената.png" class="responsive" hspace=50px">
-		<p><a stule="font-size:700px"><b>Рената Адамова</b>b></a><br>
+		<p align ="center"><a stule="font-size:700px"><b>Рената Адамова</b></a><br>
 		<a stule="font-size:150px"><i>Студентка 3 курса<br>
-		Ижевской государственной медицинской академии</i>i></a></p>
+		Ижевской государственной медицинской академии</i></a></p>
 	</figure>
 			    <p>
 			    ТекстТекстТекст
