--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		    <div>
 	<figure style="float:left">
 		<img src = "images/team/Рената.png" class="responsive" hspace=50px">
-		<p align ="center" stule="font-size:100px"><b>Рената Адамова</b><br>
+		<p align ="center" stule="font-size:100px"><b>Рената Адамова</b>
 		<p align ="center" stule="font-size:40px"><i>Студентка 3 курса<br>
 		Ижевской государственной медицинской академии</i></p>
 	</figure>
