--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	<figure style="float:left">
 		<img src = "images/team/Рената.png" class="responsive" hspace=50px">
 		<p align ="center" style="font-size:30px"><b>Рената Адамова</b><br>
-		<div style="font-size:10px"><i>Студентка 3 курса<br>
+		<div style="font-size:20px" align ="center"><i>Студентка 3 курса<br>
 		Ижевской государственной медицинской академии</i></div></p>
 	</figure>
 			    <p>
