--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
             <div class="row">
 		    <div>
 	<figure style="float:left">
-		<img src = "images/team/Рената.png" class="responsive" hspace=50px">
-		<p align ="center" style="font-size:25px"><b>Рената Адамова</b><br>
-		<div style="font-size:15px" align ="center"><i>Студентка 3 курса<br>
-		Ижевской государственной медицинской академии</i></div></p>
+		 <a href="images/team/Рената.png" Title="Рената Адамова
+Студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" hspace=50px"></a>
+		<p align ="center" style="font-size:25px"><b>Рената Адамова</b></p>
 	</figure>
 			    <p>
 			    ТекстТекстТекст
