--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="row">
 		    <div>
 	<figure style="float:left">
-		 <a href="images/team/Рената.png" Title="Рената Адамова
+		 <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова
 Студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" hspace=50px"></a>
 		<p align ="center" style="font-size:25px"><b>Рената Адамова</b></p>
 	</figure>
