--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	<figure style="float:left">
 		 <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова
 Студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" hspace=50px"></a>
-		<p align ="center" style="font-size:25px"><b>Рената Адамова</b></p>
+		<p align ="center" style="font-size:25px"><font color="#001B0D">Рената Адамова</font></p>
 	</figure>
 			    <p>
 			    ТекстТекстТекст
