--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" hspace=10px"></a>
 		<p align ="center" style="font-size:30px"><font color="#001B0D"><b>Рената Адамова</b></font></p>
 	</figure>
-			    <p>
-			 <h3 class="wow fadeInUp"> <font color="#001B0D">Медики</font></h3>
+			<p style="float:center">
+			<h3 class="wow fadeInUp"> <font color="#001B0D">Медики</font></h3>
                         <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#A7131E"></div>
 			</div>
 			    ТекстТекстТекст
-			    </p>	    
+			</p>	    
 		    </div>
 		<div class="carousel">
 		  <div class="carousel-inner">
