--- a/index.html
+++ b/index.html
@@ -124,17 +124,21 @@
         <div class="container">
             <div class="row">
 		    <div>
+	<table>
+	<tr><th>
 	<figure style="float:left">
 		 <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" hspace=10px"></a>
 		<p align ="center" style="font-size:30px"><font color="#001B0D"><b>Рената Адамова</b></font></p>
 	</figure>
+	</th>
 			<p style="float:center">
 			<h3 class="wow fadeInUp"> <font color="#001B0D">Медики</font></h3>
                         <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#A7131E"></div>
-			</div>
 			    ТекстТекстТекст
-			</p>	    
+			</p>
+	</tr>
+	</table>	    
 		    </div>
 		<div class="carousel">
 		  <div class="carousel-inner">
