--- a/index.html
+++ b/index.html
@@ -123,25 +123,29 @@
     <section id="section-speakers"  style="background:#FFFFFF">
         <div class="container">
             <div class="row">
-		    <div>
-	<table>
-	<tr><th>
-	<figure style="float:left">
+		  <div class="col-md-12 text-center">
+                            <h3 class="wow fadeInUp"> <font color="#001B0D">Медики</font></h3>
+                        <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#A7131E"></div>
+			</div>
+
+                        <div class="col-md-12 text-center wow fadeInUp">
+                            <p class="lead wow fadeInUp">
+                            <h5><font color="#000000">23 февраля – День защитника Отечества. Об этом знают все без исключения, однако далеко не все понимают саму суть этого праздника. У нас в обществе сложилось распространенное мнение о том, что 23 февраля – это праздник всех мужчин. С Днем защитника Отечества в нашей стране принято поздравлять взрослых и мальчиков, произносить в их честь высокопарные слова и устраивать всевозможные развлечения. А что уж там говорить о патриотическом воспитании подрастающего поколения. К сожалению, в учреждениях о патриотизме говорят всего пару слов и то ради формальности. Так и растут дети, не понимая ничего о патриотизме и отмечая 23 февраля, как очередную дату календаря.</font> </h5>
+                            </p>
+                        </div>
+		
+	<figure>
 		 <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" hspace=10px"></a>
 		<p align ="center" style="font-size:30px"><font color="#001B0D"><b>Рената Адамова</b></font></p>
 	</figure>
-	</th>
-		<th>
-			<p style="float:center">
+
 			<h3 class="wow fadeInUp"> <font color="#001B0D">Медики</font></h3>
                         <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#A7131E"></div>
 			    ТекстТекстТекст
-			</p>
-		</th>
-	</tr>
-	</table>	    
-		    </div>
+			
+		    
+
 		<div class="carousel">
 		  <div class="carousel-inner">
 		    <div class="carousel-item">
