--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
                             </p>
                         </div>
 		
-	<figure>
+	<div>
 		 <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align ="center" hspace=10px"></a>
 		<p align ="center" style="font-size:30px"><font color="#001B0D"><b>Рената Адамова</b></font></p>
-	</figure>	
+	</div>	
 		    
 
 		<div class="carousel">
