--- a/index.html
+++ b/index.html
@@ -156,20 +156,26 @@
 			   <p align ="center" style="font-size:25px"><font color="#001B0D"><b>Рената Адамова</b></font></p>
 		</figcaption>
 		   </figure>
-			<figure class="fig"> 
-		 <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
-		<figcaption>
-			   <p align ="center" style="font-size:25px"><font color="#001B0D"><b>Рената Адамова</b></font></p>
-		</figcaption>
-		   </figure>
-			      <figure class="fig"> 
-		 <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
-		<figcaption>
-			   <p align ="center" style="font-size:25px"><font color="#001B0D"><b>Рената Адамова</b></font></p>
-		</figcaption>
-		   </figure>
+
+			    <div class="col-md-3 mb30">
+		        <div class="profile_pic text-center">
+                        <figure class="picframe mb30">
+                            <a class="image-popup-vertical-fit" href="images/team/Рената.png"
+                                Title="Фотограф">
+                                <span class="overlay-v">
+                                    <span>Фотограф
+                                </span>
+                            </a>
+                            <img src="images/team/Рената.png" class="img-responsive" alt="">
+                        </figure>
+
+                        <h3><a
+                                href="https://vk.com/chujul"
+                                target="_blank"><font color="#001B0D">Юлия Чучалина</font></a></h3>
+                        <span class="subtitle"></span>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -350,7 +356,7 @@
             <div class="row">
                 <div class="col-md-6 sm-text-center sm-mb10">
                     <div class="mt10">
-                        <h3><font color="#DA0546">&copy; Студенческий медиацентр ИжГТУ имени М.Т. Калашникова Screen</font></h3>
+                        <h3><font color="#FFFFFF">&copy; Студенческий медиацентр ИжГТУ имени М.Т. Калашникова Screen</font></h3>
                     </div>
                 </div>
 
