--- a/index.html
+++ b/index.html
@@ -157,16 +157,43 @@
 		</figcaption>
 		   </figure>
 
+			<div class="col-md-3 mb30">
+		        <div class="profile_pic text-center">
+                        <figure class="picframe mb30">
+                            <a class="image-popup-vertical-fit" href="images/team/Рената.png"
+                                Title="Фотограф">
+                            </a>
+                            <img src="images/team/Рената.png" alt="">
+                        </figure>
+
+                        <h3><a
+                                href="https://vk.com/chujul"
+                                target="_blank"><font color="#001B0D">Юлия Чучалина</font></a></h3>
+                        <span class="subtitle"></span>
+                    </div>
+                </div>
 			    <div class="col-md-3 mb30">
 		        <div class="profile_pic text-center">
                         <figure class="picframe mb30">
                             <a class="image-popup-vertical-fit" href="images/team/Рената.png"
                                 Title="Фотограф">
-                                <span class="overlay-v">
-                                    <span>Фотограф
-                                </span>
                             </a>
-                            <img src="images/team/Рената.png" class="img-responsive" alt="">
+                            <img src="images/team/Рената.png" alt="">
+                        </figure>
+
+                        <h3><a
+                                href="https://vk.com/chujul"
+                                target="_blank"><font color="#001B0D">Юлия Чучалина</font></a></h3>
+                        <span class="subtitle"></span>
+                    </div>
+                </div>
+			    <div class="col-md-3 mb30">
+		        <div class="profile_pic text-center">
+                        <figure class="picframe mb30">
+                            <a class="image-popup-vertical-fit" href="images/team/Рената.png"
+                                Title="Фотограф">
+                            </a>
+                            <img src="images/team/Рената.png" alt="">
                         </figure>
 
                         <h3><a
