--- a/index.html
+++ b/index.html
@@ -149,60 +149,18 @@
                             </p>
                         </div>
 		    <div>
-		   <figure class="fig"> 
-		 <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
+			    
+		   <div class="fig"> 
+		 <p><a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
-		<figcaption>
-			   <p align ="center" style="font-size:25px"><font color="#001B0D"><b>Рената Адамова</b></font></p>
-		</figcaption>
-		   </figure>
-
-			<div class="col-md-3 mb30">
-		        <div class="profile_pic text-center">
-                        <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/Рената.png"
-                                Title="Фотограф">
-                            </a>
-                            <img src="images/team/Рената.png" alt="">
-                        </figure>
-
-                        <h3><a
-                                href="https://vk.com/chujul"
-                                target="_blank"><font color="#001B0D">Юлия Чучалина</font></a></h3>
-                        <span class="subtitle"></span>
-                    </div>
-                </div>
-			    <div class="col-md-3 mb30">
-		        <div class="profile_pic text-center">
-                        <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/Рената.png"
-                                Title="Фотограф">
-                            </a>
-                            <img src="images/team/Рената.png" alt="">
-                        </figure>
-
-                        <h3><a
-                                href="https://vk.com/chujul"
-                                target="_blank"><font color="#001B0D">Юлия Чучалина</font></a></h3>
-                        <span class="subtitle"></span>
-                    </div>
-                </div>
-			    <div class="col-md-3 mb30">
-		        <div class="profile_pic text-center">
-                        <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/Рената.png"
-                                Title="Фотограф">
-                            </a>
-                            <img src="images/team/Рената.png" alt="">
-                        </figure>
-
-                        <h3><a
-                                href="https://vk.com/chujul"
-                                target="_blank"><font color="#001B0D">Юлия Чучалина</font></a></h3>
-                        <span class="subtitle"></span>
-                    </div>
-                </div>
-
+			   <br><font align ="center" style="font-size:25px" color="#001B0D"><b>Рената Адамова</b></font></p>
+			    <p><a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
+			   <br><font align ="center" style="font-size:25px" color="#001B0D"><b>Рената Адамова</b></font></p>
+			    <p><a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
+			   <br><font align ="center" style="font-size:25px" color="#001B0D"><b>Рената Адамова</b></font></p>
+		   </div>
             </div>
         </div>
     </section>
