--- a/index.html
+++ b/index.html
@@ -117,23 +117,6 @@
             </section>
             <!-- section close -->
 		
-	<div class="carousel">
-		  <div class="carousel-inner">
-		    <div class="carousel-item">
-		      <img src="images/team/Юля.png" alt="Image 1">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="images/team/Юля.png" alt="Image 2">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="images/team/Юля.png" alt="Image 3">
-		    </div>
-		  </div>
-		</div>
-		<a class="prev" onclick="goToPrevSlide()">&#10094;</a>
-       		<a class="next" onclick="goToNextSlide()">&#10095;</a>   	
-
-		
     <!-- section begin СПИКЕРЫ -->
     <section id="section-speakers"  style="background:#FFFFFF">
         <div class="container">
@@ -155,7 +138,7 @@
         <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии">
           <figure>
-            <img class="fans" src="images/team/Рената.png" class="responsive">
+            <img class="fans" src="images/team/Рената.png">
             <figcaption>Рената Адамова</figcaption>
           </figure>
         </a>
@@ -164,7 +147,7 @@
        <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии">
           <figure>
-            <img class="fans" src="images/team/Рената.png" class="responsive">
+            <img class="fans" src="images/team/Рената.png">
             <figcaption>Рената Адамова</figcaption>
           </figure>
         </a>
@@ -173,7 +156,7 @@
        <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии">
           <figure>
-            <img class="fans" src="images/team/Рената.png" class="responsive">
+            <img class="fans" src="images/team/Рената.png">
             <figcaption>Рената Адамова</figcaption>
           </figure>
         </a>
