--- a/index.html
+++ b/index.html
@@ -132,41 +132,18 @@
                             </p>
                         </div>
 		    <div>
+			      <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
+			      <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
+			      <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
 
-			 <ul class="fans">
-      				<li>
-        <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии">
-          <figure>
-            <img class="fans" src="images/team/Рената.png">
-            <figcaption>Рената Адамова</figcaption>
-          </figure>
-        </a>
-      </li>
-      <li>
-       <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии">
-          <figure>
-            <img class="fans" src="images/team/Рената.png">
-            <figcaption>Рената Адамова</figcaption>
-          </figure>
-        </a>
-      </li>
-				  <li>
-       <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии">
-          <figure>
-            <img class="fans" src="images/team/Рената.png">
-            <figcaption>Рената Адамова</figcaption>
-          </figure>
-        </a>
-      </li>
-    </ul>
+		
+      
 			    
-		   <div class="fig"> 
-		 <p><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
-			   <br><font align ="center" style="font-size:25px" color="#001B0D"><b>Рената Адамова</b></font></p>
-			    <p><a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
+		 
+			    <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
 			   <br><font align ="center" style="font-size:25px" color="#001B0D"><b>Рената Адамова</b></font></p>
 			    <p><a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
