--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                         </div>
 		    <div>
 			      <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената_2.png" class="responsive" align = "center" hspace=10px"></a>
 			      <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената_2.png" class="responsive" align = "center" hspace=10px"></a>
 			      <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената_2.png" class="responsive" align = "center" hspace=10px"></a>
 
 		
 			    <p><a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
