--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                             </p>
                         </div>
 		    <div>
-		
-			    <p><a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
+			    <figure class = "fig">
+			    <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
-			   <br><font align ="center" style="font-size:25px" color="#001B0D"><b>Рената Адамова</b></font></p>
+			   <figcaption><font align ="center" style="font-size:25px" color="#001B0D"><b>Рената Адамова</font></figcaption>
 		   </div>
             </div>
         </div>
