--- a/index.html
+++ b/index.html
@@ -130,17 +130,19 @@
 			    <a class="image-popup-vertical-fit" href="images/team/Рената.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/Рената.png" class="responsive" align = "center" hspace=10px"></a>
 			   <figcaption><font align ="center" style="font-size:25px" color="#001B0D"><b>Рената Адамова</font></figcaption>
-
-				     <figure class = "fig">
+			    </figure>
+   <div class="spacer-single"></div>
+				    <figure class = "fig">
 			    <a class="image-popup-vertical-fit" href="images/team/Данил_1.png" Title="Данил Бельтюков, 
 студен 3 курса ИжГТУ имени М.Т. Калашникова"><img src = "images/team/Данил_1.png" class="responsive" align = "center" hspace=10px"></a>
 			   <figcaption><font align ="center" style="font-size:25px" color="#001B0D"><b>Данил Бельтюков</font></figcaption>
-
+				    </figure>
 					      <figure class = "fig">
 			    <a class="image-popup-vertical-fit" href="images/team/Аня.png" Title="Анна Попова, 
 студентка 3 курса ИжГТУ имени М.Т. Калашникова"><img src = "images/team/Аня.png" class="responsive" align = "center" hspace=10px"></a>
 			   <figcaption><font align ="center" style="font-size:25px" color="#001B0D"><b>Анна Попова</font></figcaption>
-		   </div>
+					      </figure>
+			</div>
             </div>
         </div>
     </section>
