--- a/index.html
+++ b/index.html
@@ -117,18 +117,18 @@
             </section>
             <!-- section close -->
 
-    <a class="image-popup-vertical-fit" href="images/team/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/team/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/team/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/team/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/team/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/team/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/team/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+    <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
 		
     <!-- section begin СПИКЕРЫ -->
     <section id="section-speakers"  style="background:#FFFFFF">
