--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
             </section>
             <!-- section close -->
-<p>
+<p class="lead wow fadeInUp">
     <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
 		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
