--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 </div>
             </section>
             <!-- section close -->
+  <div class="col-md-12 text-center wow fadeInUp">
 <p class="lead wow fadeInUp">
     <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
@@ -129,7 +130,8 @@
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
 		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
 студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
-</p>		
+</p>
+	  </div>
     <!-- section begin СПИКЕРЫ -->
     <section id="section-speakers"  style="background:#FFFFFF">
         <div class="container">
