--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@
   <div class="col-md-12 text-center wow fadeInUp">
 <p class="lead wow fadeInUp">
     <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
 		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center"  vspace="10px" hspace=10px"></a>
 		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
 		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
 		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
 		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" hspace=10px"></a>
+студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
 </p>
 	  </div>
     <!-- section begin СПИКЕРЫ -->
