--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="23" />
 <!--     <meta property="og:url" content="https://distant.istu.ru/ws2024/" /> -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Проект_проект" />
+    <meta property="og:site_name" content="23 февраля" />
     <meta property="og:image" content="images/background/1.png" />
 
     <!--[if lt IE 9]>
@@ -118,18 +118,21 @@
             <!-- section close -->
   <div class="col-md-12 text-center wow fadeInUp">
 <p class="lead wow fadeInUp">
-    <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center"  vspace="10px" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
-		 <a class="image-popup-vertical-fit" href="images/фото/2.3.png" Title="Рената Адамова, 
-студентка 3 курса Ижевской государственной медицинской академии"><img src = "images/фото/2.3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+    	<a class="image-popup-vertical-fit" href="images/фото_1/1.png"><img src = "images/фото_1/1.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/2.png"><img src = "images/фото_1/2.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/3.png"><img src = "images/фото_1/3.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/4.png"><img src = "images/фото_1/4.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/5.png"><img src = "images/фото_1/5.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/6.png"><img src = "images/фото_1/6.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/7.png"><img src = "images/фото_1/7.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/8.png"><img src = "images/фото_1/8.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/9.png"><img src = "images/фото_1/9.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/10.png"><img src = "images/фото_1/10.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/11.png"><img src = "images/фото_1/11.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/12.png"><img src = "images/фото_1/12.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/13.png"><img src = "images/фото_1/13.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/14.png"><img src = "images/фото_1/14.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
+	<a class="image-popup-vertical-fit" href="images/фото_1/15.png"><img src = "images/фото_1/15.png" class="responsive" align = "center" vspace="10px" hspace=10px"></a>
 </p>
 	  </div>
     <!-- section begin СПИКЕРЫ -->
