--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                             <div class="row">
                                 <div class="spacer-half sm-hide"></div>
                                 <div class="spacer-double sm-hide"></div>
+				<div class="spacer-double sm-hide"></div>
                                 <h1 class="big">23 ФЕВРАЛЯ<br>день защитника<br>отечества</h1> 
                                 <div class="spacer-single"></div>
                                 <h4>&ensp;Посвящается всем тем,<br>&ensp;кто выбрал защищать нашу родину</h4>
@@ -109,7 +110,10 @@
 
                         <div class="col-md-12 text-center wow fadeInUp">
                             <p class="lead wow fadeInUp">
-                            <h4><font color="#000000">23 февраля – День защитника Отечества. Об этом знают все без исключения, однако далеко не все понимают саму суть этого праздника. У нас в обществе сложилось распространенное мнение о том, что 23 февраля – это праздник всех мужчин. С Днем защитника Отечества в нашей стране принято поздравлять взрослых и мальчиков, произносить в их честь высокопарные слова и устраивать всевозможные развлечения. А что уж там говорить о патриотическом воспитании подрастающего поколения. К сожалению, в учреждениях о патриотизме говорят всего пару слов и то ради формальности. Так и растут дети, не понимая ничего о патриотизме и отмечая 23 февраля, как очередную дату календаря.</font> </h4>
+                            <h4><font color="#000000">23 февраля – День защитника Отечества. Об этом знают все без исключения, однако далеко не все понимают саму суть этого праздника. У нас в обществе сложилось распространенное мнение о том, что 23 февраля – это праздник всех мужчин. С Днем защитника Отечества в нашей стране принято поздравлять взрослых и мальчиков, произносить в их честь торжественные слова и устраивать всевозможные мероприятия. Но если углубится в суть праздника, то мы увидим, что он совсем не про это.<br>
+				Важно понимать, что 23 февраля, День защитника Отечества, впервую очередь праздник военных и всех военнобязанных, но про это, к сожалению часто забывают. Стоит еще сказать, что не только те, кто сейчас служит или служил раньше, отмечают это праздник. Существует множество специальностей, которые также являются военнообязанными, а значит это и их праздник тоже. С помощью данного проекта мы хотели бы не только поздравить все причастных к этому празднику, но и обротить твое внимание на тот факт, что защитником Отечества является не только тот, кто носит форму.<br>
+				
+			    </font> </h4>
                             </p>
                         </div>
                     </div>
