--- a/index.html
+++ b/index.html
@@ -185,59 +185,17 @@
                     </div>
 
                     <div class="schedule-item">
-                        <div class="text-center"><a
-                                href="https://istu.ru/department/noc-innovacionnye-tehnologii-v-yazykovom-professionalnom-obrazovanii/page/204"
-                                target="_blank">
-                                <h3>История зимней школы</h3>
-                            </a></div>
 
-                        <div class="clearfix"></div>
-                        <div class="text-center"><a
-                                href="http://epign.istu.ru/news/37-aya/405-zimnyaya-shkola-pedagogicheskogo-masterstva"
-                                target="_blank">
-                                <h4>Зимняя школа педагогического мастерства 2018 «Иноязычная профессиональная подготовка
-                                    будущих специалистов в условиях интеграции в международное образовательное
-                                    пространство»</h4>
-                            </a></div>
-
-
-                        <div class="clearfix"></div>
-                        <div class="text-center"><a
-                                href="https://istu.ru/news/nauka/kruglyy-stol-shkola-tehnikum-vuz-aktualnye-yazykovye-aspekty-nepreryvnogo-obrazovaniya"
-                                target="_blank">
-                                <h4>Зимняя школа педагогического мастерства 2019 «Школа-техникум-вуз: актуальные
-                                    языковые аспекты непрерывного образования»</h4>
-                            </a></div>
 
                         <div class="clearfix"></div>
                         <div class="text-center">
-                                <h4>Зимняя школа педагогического мастерства 2020 «Педагогическая среда при обучении
-                                    иностранным языкам в условиях интеграции в мировое информационно-образовательное
-                                    пространство»</h4>
+                                <h4>Поздравление с днем защитника...</h4>
                         </div>
                         <div class="clearfix"></div>
                         <div class="text-center">
-                                <h4>IV Всероссийская Зимняя школа педагогического мастерства 2021 «Цифровизация
-                                    языкового образования в условиях интеграции в мировое образовательное пространство»
-                                    (21 января – 4 февраля 2021 г.)</h4>
+                                <h4>Благодарим за помощь</h4>
                             </div>
 
-                        <div class="clearfix"></div>
-                        <div class="text-center">
-                                <h4>V Всероссийская Зимняя школа педагогического мастерства с международным участием
-                                    «Цифровизация языкового образования в условиях интеграции в мировое образовательное
-                                    пространство» (26 января – 26 февраля 2022 г.)</h4>
-                            </div>
-
-                        <div class="clearfix"></div>
-                        <div class="text-center">
-                                <h4>VI Всероссийская зимняя
-                                    школа педагогического
-                                    мастерства
-                                    «Цифровизация высшего образования и языкового обучения
-                                    в постковидную эпоху: тренды, требования и технологии»
-                                    (с международным участием) (25 января – 27 февраля 2023 г.)</h4>
-                            </div>
                     </div>
                 </div>
             </div>
