--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <div class="spacer-half sm-hide"></div>
                                 <div class="spacer-double sm-hide"></div>
 				<div class="spacer-double sm-hide"></div>
-                                <h1 class="big">23 ФЕВРАЛЯ<br>день защитника<br>отечества</h1> 
+                                <h1 class="big">23 ФЕВРАЛЯ<br>День защитника<br>Отечества</h1> 
                                 <div class="spacer-single"></div>
                                 <h4>&ensp;Посвящается всем тем,<br>&ensp;кто выбрал защищать нашу родину</h4>
                                 <div class="spacer-single"></div>
@@ -190,11 +190,13 @@
 
                         <div class="clearfix"></div>
                         <div class="text-center">
-                                <h4>Поздравление с днем защитника...</h4>
+                                <h4>Дорогие защитники! Примите поздравления с 23 февраля, с самыми искренними и добрыми пожеланиями удачи и уверенности в своих силах. Пусть ваши ожидания хорошего всегда сбываются, а сомнения рассеиваются, пусть ваши мечты не заканчиваются, а становятся все ярче и насыщенней, а все ваши планы претворяются в жизнь.<br>
+					С праздником!</h4>
                         </div>
                         <div class="clearfix"></div>
                         <div class="text-center">
-                                <h4>Благодарим за помощь</h4>
+                                <h4>Выражаем благодарность всем, кто помогал в реализации проекта.<br>
+				Особено хотим поблагадарить за участие Адамову Ренату, Попову Анну и Белютикова Данила - герой проекта, а также Военный учебный центр ИжГТУ имени М.Т. Калашникова</h4>
                             </div>
 
                     </div>
@@ -219,10 +221,10 @@
                         <figure class="picframe mb30">
                             <a class="image-popup-vertical-fit" href="images/team/Даша.png"
                                 Title="Редактор проекта
-дизайнер">
+Дизайнер">
                                 <span class="overlay-v">
                                     <span>Редактор проекта<br>
-дизайнер
+Дизайнер
                                 </span>
                             </a>
                             <img src="images/team/Даша.png" class="img-responsive" alt="">
@@ -238,12 +240,12 @@
                         <figure class="picframe mb30">
                             <a class="image-popup-vertical-fit" href="images/team/Данил.png"
                                 Title="Продюсер проекта
-верстальщик лендинга
-копирайтеп">
+Верстальщик лендинга
+Копирайтеп">
                                 <span class="overlay-v">
                                     <span>Продюсер проекта<br>
-верстальщик лендинга<br>
-копирайтер 
+Верстальщик лендинга<br>
+Копирайтер 
                                 </span>
                             </a>
                             <img src="images/team/Данил.png" class="img-responsive" alt="">
