--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
 
                         <div class="clearfix"></div>
                         <div class="text-center">
-                                <h4>Дорогие защитники! Примите наши поздравления с 23 февраля, с самыми искренними и добрыми пожеланиями удачи и уверенности в своих силах. Пусть ваши ожидания хорошего всегда сбываются, а сомнения рассеиваются, пусть ваши мечты не заканчиваются, а становятся все ярче и насыщенней, а все ваши планы претворяются в жизнь.<br><br>
+                                <h4>Дорогие защитники! Примите наши поздравления с 23 февраля, с самыми искренними и добрыми пожеланиями удачи и уверенности в своих силах. Пусть ваши ожидания хорошего всегда сбываются, а сомнения рассеиваются, пусть ваши мечты не заканчиваются, а становятся все ярче и насыщенней, а все ваши планы претворяются в жизнь.<br>
 					С праздником!</h4>
                         </div>
 			<div class="profile_pic text-center">
 			<div class="profile_pic text-center">
                         <div class="clearfix"></div>
                         <div class="text-center">
-                                <h4>Выражаем благодарность всем, кто помогал в реализации проекта.<br><br>
+                                <h4>Выражаем благодарность всем, кто помогал в реализации проекта.<br>
 				Особено хотим поблагадарить за участие Адамову Ренату, Попову Анну и Белютикова Данила, а также Военный учебный центр ИжГТУ имени М.Т. Калашникова</h4>
                             </div>
 
