--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                         <div class="col-md-12 text-center wow fadeInUp">
                             <p class="lead wow fadeInUp">
                             <h4><font color="#000000">23 февраля – День защитника Отечества. Об этом знают все без исключения, однако далеко не все понимают саму суть этого праздника. У нас в обществе сложилось распространенное мнение о том, что 23 февраля – это праздник всех мужчин. С Днем защитника Отечества в нашей стране принято поздравлять взрослых и мальчиков, произносить в их честь торжественные слова и устраивать всевозможные мероприятия. Но если углубится в суть праздника, то мы увидим, что он совсем не про это.<br><br><br>
-				Важно понимать, что 23 февраля, День защитника Отечества, впервую очередь праздник военных и всех военнобязанных, но про это, к сожалению часто забывают. С помощью данного проекта мы хотели бы не только поздравить все причастных к этому дню, но и обротить твое внимание на тот факт, что защитником Отечества является не только тот, кто напрямую связан с армией.<br><br><br>
-				Наш проект впервую очередь затрагивает врачей, тех, про кого почему-то часто забывают в этот день, хотя они также являются военнообязанными, и некоторые специальности, которые также являются военнообязанными.<br><br><br>
+				Важно понимать, что 23 февраля, День защитника Отечества, в первую очередь праздник военных и всех военнообязанных, но про это, к сожалению часто забывают. С помощью данного проекта мы хотели бы не только поздравить все причастных к этому дню, но и обратить твое внимание на тот факт, что защитником Отечества является не только тот, кто напрямую связан с армией.<br><br><br>
+				Наш проект затрагивает врачей, тех, про кого почему-то часто забывают в этот день, хотя они также являются военнообязанными, и некоторые специальности, которые также являются военнообязанными.<br><br><br>
 				    Также в нашем проекте ты найдешь несколько классных фотокарточек, посвященных Военному учебному центру ИжГТУ имени М.Т. Калашникова, месту, где обучают будущих защитников Отечества.
 			    </font> </h4>
                             </p>
@@ -198,7 +198,7 @@
                         <div class="clearfix"></div>
                         <div class="text-center">
                                 <h4>Выражаем благодарность всем, кто помогал в реализации проекта.<br>
-				Особено хотим поблагадарить за участие Адамову Ренату, Попову Анну и Белютикова Данила, а также Военный учебный центр ИжГТУ имени М.Т. Калашникова</h4>
+				Особенно хотим поблагадорить за участие Адамову Ренату, Попову Анну и Бельтюкова Данила, а также Военный учебный центр ИжГТУ имени М.Т. Калашникова</h4>
                             </div>
 
                     </div>
