--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<div class="spacer-double sm-hide"></div>
                                 <h1 class="big">23 ФЕВРАЛЯ<br>День защитника<br>Отечества</h1> 
                                 <div class="spacer-single"></div>
-                                <h4>&ensp;Посвящается всем тем,<br>&ensp;кто выбрал защищать нашу родину</h4>
+                                <h4>&ensp;Посвящается всем тем,<br>&ensp;кто выбрал защищать нашу Родину</h4>
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
                                 <div class="clearfix"></div>
