--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
 
-                    <h2 class="wow fadeInUp"><font color="#001B0D">Командна проекта</font></h2>
+                    <h2 class="wow fadeInUp"><font color="#001B0D">Команда проекта</font></h2>
                     <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#A7131E"></div>
                 </div>
 		<div class="spacer-single"></div>
